--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,33 @@
-Flask_Cors==3.0.8
+appdirs==1.4.3
+certifi==2020.6.20
+chardet==4.0.0
+click==7.1.2
+distlib==0.3.0
+docopt==0.6.2
+filelock==3.0.12
 Flask==1.1.2
-pandas==1.0.1
-scikit_learn==0.24.1
+Flask-Cors==3.0.8
 gunicorn==20.0.4
-Werkzeug==0.16.0
-Jinja2==2.10.1
+idna==2.10
+importlib-metadata==1.7.0
+importlib-resources==1.5.0
 itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
 MarkupSafe==1.1.1
+numpy==1.16.0
+pandas==1.0.1
+pipreqs==0.4.10
+python-dateutil==2.8.1
+pytz==2019.3
+requests==2.25.1
+scikit-learn==0.22.1
+scipy==1.4.1
+six==1.14.0
+urllib3==1.26.4
+virtualenv==20.0.7
+Werkzeug==1.0.1
+wincertstore==0.2
+yarg==0.1.9
+zipp==3.4.1
+
