--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,12 @@ appdirs==1.4.3
 certifi==2020.6.20
 click==7.1.2
 distlib==0.3.0
+filelock==3.0.12
 Flask==1.1.2
 Flask-Cors==3.0.8
 gunicorn==20.0.4
+importlib-metadata==1.7.0
+importlib-resources==1.5.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.15.1
